# serialite

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  python.yml  release.yml
src/serialite/: __init__.py  _base.py  _dataclass.py  _decorators.py  _descriptors.py  _dispatcher.py  _errors.py  _field_errors.py  _fields_serializer.py  _mixins.py  _monkey_patches.py  _numeric_check.py  _openapi.py  _result.py  _stable_set.py  _type_errors.py
src/serialite/_implementations/: __init__.py  _array.py  _boolean.py  _date.py  _date_time.py  _dictionary.py  _enum.py  _float.py  _integer.py  _json.py  _list.py  _literal.py  _none.py  _ordered_set.py  _path.py  _reserved.py  _set.py  _string.py  _tuple.py  _type_errors.py  _union.py  _uuid.py
tests/: test_concrete_subclass_discovery.py  test_dataclass.py  test_dispatcher.py  test_errors.py  test_field_serializers.py  test_mixins.py  test_multi_level_abstract.py  test_numpy.py  test_serializers_base.py  test_stable_set.py
tests/fastapi/: __init__.py  test_abstract.py  test_concrete.py  test_concrete_list.py  test_custom_scalar.py  test_monkey_patching.py  test_schema_refs.py
tests/implementations/: test_boolean.py  test_date.py  test_date_time.py  test_enum.py  test_float.py  test_integer.py  test_json.py  test_list.py  test_literal.py  test_none.py  test_optional.py  test_ordered_dict.py  test_ordered_set.py  test_path.py  test_raw_dict.py  test_reserved.py  test_set.py  test_string.py  test_try_union.py  test_tuple.py  test_uuid.py
tests/type_checking/: test_dataclass.py  test_dataclass_mixin.py
